force-app/main/default/objects/MC_Encryption_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Algorithm__c</fullName>
        <label>Algorithm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decryption_Group_Id__c</fullName>
        <label>Decryption Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Format__c</fullName>
        <label>Mask Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MC Encryption Settings</label>
</CustomObject>